# rug-roulette

./: Anchor.toml  README.md  package-anchor.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
components/: SlotCard.tsx  WalletProvider.tsx
lib/: game.ts
programs/rug-roulette/: Cargo.toml
programs/rug-roulette/src/: lib.rs
public/.apps-fun/: verify
tests/: rug-roulette.ts  tsconfig.json  unit.ts
