[package]
name = "rug-roulette"
version = "0.1.0"
description = "6 tokens. 5 rugs. 1 survivor."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rug_roulette"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
